force-app/main/default/objects/Trader__c/Trader__c.object-meta.xml
<CustomObject>
    <description>Stores all trader information.</description>
    <label>Trader</label>
    <nameField>
        <label>Trader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Traders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>