force-app/main/default/objects/Trader__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>NISM Certified</fullName>
            </value>
            <value>
                <fullName>NCFM Certified</fullName>
            </value>
            <value>
                <fullName>NSE Certified</fullName>
            </value>
            <value>
                <fullName>SEBI Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>