force-app/main/default/objects/Trader__c/fields/PAN_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Number__c</fullName>
    <description>ABCDE1234F</description>
    <inlineHelpText>Enter valid PAN number.
Example: ABCDE1234F</inlineHelpText>
    <label>PAN Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>