force-app/main/default/objects/Trader__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
                <default>true</default>
                <label>Medium Risk</label>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>