force-app/main/default/objects/Trader__c/fields/Trader_Category__c.field-meta.xml
<CustomField>
    <fullName>Trader_Category__c</fullName>
    <formula>IF( Trading_Limit__c  &gt;= 1000000, &quot;Premium&quot;, &quot;Standard&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trader Category</label>
    <type>Text</type>
</CustomField>