force-app/main/default/objects/Trader__c/fields/Trader_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Trader_Experience_Level__c</fullName>
    <formula>IF( Experience__c   &lt; 2, &quot;Beginner&quot;,  IF( Experience__c  &lt; 5, &quot;Intermediate&quot;, &quot;Expert&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trader Experience Level</label>
    <type>Text</type>
</CustomField>