force-app/main/default/objects/Trader__c/fields/Trader_ID__c.field-meta.xml
<CustomField>
    <fullName>Trader_ID__c</fullName>
    <displayFormat>TR-{00000}</displayFormat>
    <label>Trader ID</label>
    <type>AutoNumber</type>
</CustomField>