force-app/main/default/objects/Trader__c/fields/Trading_Limit__c.field-meta.xml
<CustomField>
    <fullName>Trading_Limit__c</fullName>
    <label>Trading Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>