force-app/main/default/objects/Trader__c/validationRules/Experience_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Experience__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Experience__c</errorDisplayField>
    <errorMessage>Experience cannot be negative.</errorMessage>
</ValidationRule>