force-app/main/default/objects/Trader__c/validationRules/Trading_Limit_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Trading_Limit_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Trading_Limit__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Trading_Limit__c</errorDisplayField>
    <errorMessage>Trading limit must be greater than zero.</errorMessage>
</ValidationRule>